app/assets/stylesheets/sidebar_notebook.scss
.notebook-side {
    height: 100%;
    width: 0px;
    position: fixed;
    z-index: 1;
    top: 0;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
    background-color: white;
    left: 70px;
    border-right: 2px solid lightgray;
    z-index: 5;
}

.notebook-side a {
    text-decoration: none;
    display: block;
    transition: 0.3s;
}

.notebook-side a:hover {
    color: #f1f1f1;
}

.notebook-side .addnotebook {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
    color: green;
}

